# freeciv

./: .gitattributes  .gitignore  .gitlab-ci.yml  .mailmap  .travis.yml  ABOUT-NLS  AUTHORS  BUGS  CHANGES  CREDITS  ChangeLog  Dockerfile  Dockerfile.deploy  HOWTOPLAY  INSTALL  INSTALL.debian  Imakefile  Makefile.am  Makefile.in  Makefile.noimake  NEWS  NEWS-2.3  NEWS-2.4  NEWS-2.5  NEWS-2.6  NEWS-3.0  NEWS-3.1  NEWS-3.2  PEOPLE  README  README.AI  README.cma  README.coding_style  README.graphics  README.md  README.rulesets  THANKS  TODO  acconfig.h  acconfig.old  (+25 more)
ai/: Makefile.am  Makefile.in  advattitude.c  advattitude.h  advdiplomacy.c  advdiplomacy.h  advdomestic.c  advdomestic.h  advforeign.c  advforeign.h  advisland.c  advisland.h  advleader.c  advleader.h  advmilitary.c  advmilitary.h  advscience.c  advscience.h  advspace.c  advspace.h  advtrade.c  advtrade.h  aiair.c  aiair.h  aicity.c  aicity.h  aidata.c  aidata.h  aidiplomat.c  aidiplomat.h  aiexplorer.c  aiexplorer.h  aiferry.c  aiferry.h  aiguard.c  aihand.c  aihand.h  aihunt.c  aihunt.h  ailog.c  (+21 more)
bootstrap/: .gitignore  Makefile.am  Makerules.mk  civ.in  config.rpath  fc_gitrev_gen.h.tmpl  fc_svnrev_gen.h.in  fc_svnrev_gen.h.tmpl  fcgui.in  fcruledit.in  fcruleup.in  fcser.in  freeciv-gtk2.appdata.xml.in  freeciv-gtk2.desktop.in  freeciv-gtk3.22.appdata.xml.in  freeciv-gtk3.22.desktop.in  freeciv-gtk3.appdata.xml.in  freeciv-modpack.appdata.xml.in  freeciv-modpack.desktop.in  freeciv-mp-gtk2.appdata.xml.in  freeciv-mp-gtk2.desktop.in  freeciv-mp-gtk3.appdata.xml.in  freeciv-mp-gtk3.desktop.in  freeciv-mp-gtk4.appdata.xml.in  freeciv-mp-qt.appdata.xml.in  freeciv-mp-qt.desktop.in  freeciv-qt.appdata.xml.in  freeciv-qt.desktop.in  freeciv-ruledit.appdata.xml.in  freeciv-ruledit.desktop.in  freeciv-sdl.appdata.xml.in  freeciv-sdl.desktop.in  freeciv-sdl2.appdata.xml.in  freeciv-sdl2.desktop.in  freeciv-server.appdata.xml.in  freeciv-server.desktop.in  freeciv.desktop.in  freeciv.fcproj  freeciv.project  freeciv.spec.in  (+44 more)
client/: .gitignore  Freeciv.h  Makefile.am  Makefile.in  attribute.c  attribute.h  audio.c  audio.h  audio_alsa.c  audio_alsa.h  audio_amiga.c  audio_amiga.h  audio_esd.c  audio_esd.h  audio_none.c  audio_none.h  audio_sdl.c  audio_sdl.h  audio_winmm.c  audio_winmm.h  canvas.c  canvasp.h  chatline.c  chatline.h  chatline_common.c  chatline_common.h  citydlg.c  citydlg.h  citydlg_common.c  citydlg_common.h  cityrep.c  cityrep.h  cityrepdata.c  cityrepdata.h  civclient.c  civclient.h  civclient_gen.c  client_main.c  client_main.h  climap.c  (+112 more)
common/: .gitignore  Makefile.am  Makefile.in  accessarea.c  accessarea.h  achievements.c  achievements.h  actions.c  actions.h  actres.c  actres.h  ai.c  ai.h  astring.c  astring.h  attribute.h  base.c  base.h  borders.c  borders.h  calendar.c  calendar.h  capability.c  capability.h  capstr.c  capstr.h  chat.h  citizens.c  citizens.h  city.c  city.h  clientutils.c  clientutils.h  combat.c  combat.h  connection.c  connection.h  counters.c  counters.h  create_lsend.pl  (+147 more)
data/: .gitignore  3d.tilespec  Freeciv  Freeciv.in  Makefile.am  Makefile.in  alien.modpack  alien.serv  alio.modpack  alio.tilespec  amplio.modpack  amplio.tilespec  amplio2.modpack  amplio2.tilespec  ce27.modpack  cimpletoon.modpack  cimpletoon.tilespec  civ1.modpack  civ1.serv  civ2.modpack  civ2.serv  civ2civ3.modpack  civ2civ3.serv  civclient.dsc.in  civserver.dsc.in  classic.modpack  classic_terrain.ruleset  database.lua  default.modpack  default.serv  default.tilespec  earth-160x90.sav  earth-80x50.sav  engels.tilespec  engels_shields.tilespec  europe.sav  experimental.serv  freeciv-client.icns  freeciv-server.icns  freeciv.rc  (+40 more)
dependencies/: Makefile.am
doc/: BUGS  BUGS.de  BUGS.sv  CodingStyle  FAQ  HACKING  HOWTOPLAY  HOWTOPLAY.de  HOWTOPLAY.fr  HOWTOPLAY.it  HOWTOPLAY.ja  HOWTOPLAY.sv  INSTALL.Cygwin  INSTALL.autotools  INSTALL.de  INSTALL.debian.de  INSTALL.fr  INSTALL.it  INSTALL.meson  Makefile.am  Makefile.in  NEWS.de  NEWS.ja  PEOPLE  README  README.AI  README.AI_modules  README.SDLClient  README.achievements  README.actions  README.cma  README.crosser  README.de  README.delta  README.effects  README.fcdb  README.fr  README.ftwl  README.governor  README.graphics  (+21 more)
modinst/: .gitignore  Makefile.am  download.c  download.h  modinst.c  modinst.h  mpcmdline.c  mpcmdline.h  mpdb.c  mpdb.h  mpgui_gtk.c  mpgui_qt.cpp
server/: .gitignore  Makefile.am  Makefile.in  aahand.c  aahand.h  actiontools.c  actiontools.h  aiiface.c  aiiface.h  airgoto.c  airgoto.h  animals.c  animals.h  auth.c  auth.h  autoattack.c  autoattack.h  barbarian.c  barbarian.h  citizenshand.c  citizenshand.h  cityhand.c  cityhand.h  citytools.c  citytools.h  cityturn.c  cityturn.h  civserver.c  civserver.h  commands.c  commands.h  connecthand.c  connecthand.h  console.c  console.h  diplhand.c  diplhand.h  diplomats.c  diplomats.h  edithand.c  (+85 more)
tests/: .gitignore  Makefile.am  all_tests.sh  check_macros.sh  copyright.sh  fcintl.sh  generate_rs_not_broken.sh  generate_rs_save.sh  generate_rs_upgrade.sh  header_guard.sh  rulesets_autohelp.sh.in  rulesets_not_broken.sh.in  rulesets_save.sh.in  rulesets_upgrade.sh.in  src-check.sh  test_invariant_classicai.c  trailing_spaces.sh  va_list.sh
tools/: .gitignore  Makefile.am  civmanual.c  download.c  download.h  modinst.c  modinst.h  mpcli.c  mpcmdline.c  mpdb.c  mpgui_gtk.c  mpgui_gtk2.c  mpgui_gtk3.c  mpgui_gtk4.c  mpgui_qt.cpp  mpgui_qt.h  mpgui_qt_worker.cpp  mpgui_qt_worker.h  ruleup.c  tools_fc_interface.c
utility/: .gitignore  Makefile.am  astring.c  astring.h  bitvector.c  bitvector.h  bugs.c  bugs.h  capability.c  capability.h  deprecations.c  deprecations.h  distribute.c  distribute.h  executable.c  executable.h  fc_cmdhelp.c  fc_cmdline.c  fc_cmdline.h  fc_dirent.c  fc_prehdrs.h  fc_utf8.c  fc_utf8.h  fcbacktrace.c  fcbacktrace.h  fciconv.c  fciconv.h  fcintl.c  fcintl.h  fcthread.c  fcthread.h  generate_specenum.py  genhash.c  genhash.h  genlist.c  genlist.h  hash.c  hash.h  inputfile.c  inputfile.h  (+45 more)
win32/: Makefile.am  clienticon.rc
windows/: Makefile.am  (+1 more)
(+4027 files in other folders)
